# RustLogger

./: .gitignore  DOCKER_SETUP.md  LICENSE  README.md  README_Abgabe  abgabe.json  compose.yaml  flake.nix  message_types.toml  pre-commit-config.yaml
container-log-collector/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  container_mappings.json.bak
container-log-collector/src/: api_client.rs  buffer_db.rs  config.rs  log_forwarder.rs  main.rs  syslog_server.rs
docker-compose/: .env  .env.example  docker-compose.yml  example.env
docker-compose/container-log-lb/: Dockerfile  nginx.conf
docker-compose/elastic-lb/: haproxy.cfg
docker-compose/elasticsearch/: es01.yml  es02.yml  es03.yml  es04.yml  es05.yml
docker-compose/env/: README.md  api.env.example  elasticsearch.env.example  logging.env.example
docker-compose/haproxy/: Dockerfile  haproxy.cfg
docker-compose/kibana/: kibana.yml
docker-compose/log-forwarding-lb/: Dockerfile  nginx.template
docker-compose/metricbeat/: metricbeat.yml
docker-compose/metricbeat/modules.d/: haproxy.yml
elastic-connector/: Cargo.toml
elastic-connector/src/: main.rs
elastic-stack/: docker-compose.yml  env-example.env
graphs/: architecture.txt  data-flow.txt  startup-order.txt
log-forwarding-api/: Cargo.toml  Dockerfile
log-forwarding-api/src/: elastic.rs  log_entry.rs  log_entry_components.rs  main.rs  query_structures.rs  server_error.rs
log-generator/: Cargo.toml  Dockerfile  application_logs.csv  iot_sensor.csv  kafka.csv  system_metrics.csv
log-generator/src/: config.rs  log_collector.rs  log_generator.rs  logging_types.rs  main.rs  message_generator.rs
log-sender/: Cargo.toml  Dockerfile  example.env
log-sender/src/: main.rs
log-tui/: .env.example  Cargo.toml  README.md
log-tui/src/: api.rs  app.rs  main.rs  ui.rs
log_sender/: .env  Cargo.toml  Dockerfile  example.env
log_sender/src/: main.rs
r-proxy-actix/: example.env
r-proxy-actix/actix-api/: Cargo.toml  Dockerfile
r-proxy-actix/actix-api/src/: elastic.rs  main.rs  serializable_objects.rs
r-proxy-actix/log-forwarding-api/: Cargo.toml  Dockerfile  example.env
r-proxy-actix/log-forwarding-api/src/: elastic.rs  log_entry.rs  main.rs  serializable_objects.rs
r-proxy-actix/nginx/: Dockerfile  nginx.conf  nginx.template
rust-logger/: .env  Cargo.toml  Dockerfile  iot_sensor.csv  timescaledb.csv
rust-logger/src/: config.rs  generator.rs  log_collector.rs  log_generator.rs  logging_types.rs  main.rs  message_generator.rs  utility.rs
