[package]
name = "container-log-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.11"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }
chrono = { version ="0.4.42", features = ["serde"] }

