[package]
name = "elastic-connector"
version = "0.1.0"
edition = "2024"

[dependencies]
elasticsearch = { version = "8.19.0-alpha.1", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.4"
