[package]
name = "log-forwarding-api"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
derive_more = "2.0.1"
dotenvy = "0.15.7"
elasticsearch = "8.19.0-alpha.1"
env_logger = "0.11.8"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
url = "2.5.4"
uuid = { version = "1.18.0", features = ["v4"] }
