[package]
name = "rust-logger"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.1"
clap = { version = "4.5.41", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
indexmap = { version = "2.0", features = ["serde"] }
toml = { version = "0.8", features = ["preserve_order"] }
log = "0.4"
env_logger = "0.11"
