[package]
name = "rust-logger"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
polars = { version = "0.49.1", features = ["lazy"] }

serde = { version = "1.0", features = ["derive"] }
rand = "0.9.1"
clap = { version = "4.5.41", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
indexmap = "2.0"
toml = { version = "0.8", features = ["preserve_order"] }
