[package]
name = "actix-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
elasticsearch = "9.1.0-alpha.1"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
url = "2.5.4"
