[package]
name = "log-forwarding-api"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
elasticsearch = "8.19.0-alpha.1"
env_logger = "0.11.8"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
url = "2.5.4"
uuid = { version = "1.18.0", features = ["v4"] }
toml = "0.8"
regex = "1.11.1"
